| priyanshu|remove duplicate code for mic-speaker component and commented code from record.js

--- a/assets/css/validator-prompt.css
+++ b/assets/css/validator-prompt.css
@@ -35,4 +35,11 @@ a{
     overflow-x: hidden;
 }
 
+@media (max-width: 767px) {
+    .record-btn-container {
+        flex-direction: column-reverse;
+        align-items: flex-end;
+    }
+}
+
 
