--- a/views/home.ejs
+++ b/views/home.ejs
@@ -234,7 +234,7 @@
                     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
                     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
             
-                    <script src="../js/home.js" id="home-page" default-lang="<%= defaultLang %>"></script>
+                    <script src="../js/home.js" id="home-page" default-lang=""></script>
                     <script src="https://www.amcharts.com/lib/version/4.9.23/core.js"></script>
                     <script src="https://www.amcharts.com/lib/version/4.9.23/charts.js"></script>
                     <script src="https://www.amcharts.com/lib/version/4.9.23/maps.js"></script>
