| priyanshu | highlight capslock button on click

--- a/views/temp1.ejs
+++ b/views/temp1.ejs
@@ -64,8 +64,9 @@
                     </div>
                 </div>
             </div>
-            <input class="input" placeholder="Tap on the virtual keyboard to start">
-            <div class="simple-keyboard"></div>
+            <div class="row justify-content-center align-items-center">
+            <textarea class="input mb-5 justify-content-center align-items-center" placeholder="" style="width:50%;height:120px"></textarea>
+            </div>
             <div class="row justify-content-center align-items-center" id="startRecordRow">
                 <div class="col-xl-3 col-md-3 col-sm-4 col-6 col-lg-3">
                     <button type="button" tabindex="-1" id="skipBtn" class="btn btn-outline-primary h6 w-100 rounded p-3"> <%= __('SKIP') %> </button>
@@ -85,6 +86,7 @@
                     </div>
                 </div>
             </div>
+            <div class="simple-keyboard"></div>
         </div>
     </div>
 </div>
