--- a/views/common/charts/lineGraph/lineGraph.ejs
+++ b/views/common/charts/lineGraph/lineGraph.ejs
@@ -16,4 +16,7 @@
     <div class="text-center justify-content-center d-none align-items-center chart-spinner" id="timeline-loader"><span class="spinner"></span></div>
     <div id="timeline-chart" class="h-100 pb-4"></div>
 </div>
-<script></script>
+<script src="https://www.amcharts.com/lib/version/4.9.23/core.js"></script>
+<script src="https://www.amcharts.com/lib/version/4.9.23/charts.js"></script>
+<script src="https://www.amcharts.com/lib/version/4.9.23/themes/animated.js"></script>
+<script src="../../js/lineGraph.js"></script>
