| priyanshu + ayush| extract lineGraph and PieGraph

--- a/views/common/charts/pieGraph/pieGraph.ejs
+++ b/views/common/charts/pieGraph/pieGraph.ejs
@@ -1,6 +1,5 @@
-<div class="col-12 col-lg-5 mb-3 text-center chart age-group-chart d-none p-4">
-    <div class="text-left px-3 pb-3">
-        <%= __('Age Group Distribution') %>
-    </div>
-    <div id="age-group-chart" class="h-100"></div>
+<div class="text-left px-3 pb-3">
+    <%= __('Age Group Distribution') %>
 </div>
+<div id="age-group-chart" class="h-100"></div>
+<script src="../../js/pieGraph.js"></script>
