[Sunny] refactoring of mic speaking testing template

--- a/views/modules/sunoIndia/record/record.ejs
+++ b/views/modules/sunoIndia/record/record.ejs
@@ -22,7 +22,7 @@
             <%- include ('../../common/buttons/report-btn/report-btn.ejs') %>
             <%- include ('../../common/buttons/mic-speaker-test-btn/mic-speaker-test-btn.ejs') %>
 </div>
-        <%- include modals/mic-speaker-testing.ejs %>
+        <%- include ('../../common/modals/mic-speaker-testing.ejs') %>
         <div class="xs-p-16">
             <div class="row justify-content-center my-5">
                 <div class="col-md-8 col-sm-10 text-center prompt"><label class="h1 font-weight-normal" id="sentenceLbl"></label></div>
