Build dashboard for all the modules

--- a/views/common/charts/lineGraph/lineGraph.ejs
+++ b/views/common/charts/lineGraph/lineGraph.ejs
@@ -13,4 +13,5 @@
 </div>
 <div class="text-center justify-content-center d-none align-items-center chart-spinner" id="timeline-loader"><span class="spinner"></span></div>
 <div id="timeline-chart" class="h-100 pb-4"></div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" async></script>
 <script src="../../js/lineGraph.js"></script>
