--- a/views/common/charts/map/map.ejs
+++ b/views/common/charts/map/map.ejs
@@ -13,3 +13,6 @@
         <div class="legend-val">4+ hrs</div>
     </div>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" async></script>
+<script src="../../js/map.js"></script>
