--- a/views/modules/dekhoIndia/home/dekhoHome.ejs
+++ b/views/modules/dekhoIndia/home/dekhoHome.ejs
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-<%- include ../../../common/headerForContributor.ejs %>
+<%- include ../../../common/header.ejs %>
 <div class="container-fluid supreme-container">
     <div class="row">
         <%- include ../../../common/languageNavBar/languageNavBar.ejs %>
