--- a/views/common/card/cards.ejs
+++ b/views/common/card/cards.ejs
@@ -3,19 +3,19 @@
     <div id="left_container" class="row align-items-center py-lg-5 position-relative col-10 card_container px-0" style="height:100%">
         <div class="col-8 px-0">
             <h1 class="display-5">
-                <%= __('Speak') %>
+                <%= __(left.h1) %>
             </h1>
             <div class="mt-3 font-weight-bold">
-                <%= __('Contribute Your Voice') %>
+                <%= __(left.h2) %>
             </div>
         </div>
         <div class="col-4 text-right px-0">
-            <img src="../img/say.svg" alt="speaker" id="start_recording" data-toggle="modal" class="cursor-pointer left-logo img-fluid" data-target="#userModal" width="140px" height="140px">
+            <img src="<%= left.img %>" alt="speaker" id="start_recording" data-toggle="modal" class="cursor-pointer left-logo img-fluid" data-target="#userModal" width="140px" height="140px">
         </div>
 
         <div id="left-p-2" class="col-12 d-none position-absolute px-0" style="bottom:1rem">
             <div>
-                <%= __('Contribute your voice to create an open data repository of Indian languages') %>
+                <%= __(left.p1) %>
             </div>
             <div class="col-5 col-lg-5 col-xl-4" id="left-loader">
                 <div><span class="spinner"></span></div>
@@ -28,19 +28,19 @@
     <div id="right_container" class="row position-relative align-items-center py-lg-5 col-10 card_container px-0" style="height:100%">
         <div class="col-8 px-0">
             <h1 class="display-5">
-                <%= __('Listen') %>
+                <%= __(right.h1) %>
             </h1>
             <div class="mt-3 font-weight-bold">
-                <%= __('Validate What They Say') %>
+                <%= __(right.h2) %>
             </div>
         </div>
         <div class="col-4 text-right px-0">
             <a href="./validator-page.html">
-                <img src="../img/listen.svg" alt="validator" id="start_validating" width="140px" height="140px" class="cursor-pointer right-logo img-fluid"></a>
+                <img src="<%= right.img %>" alt="validator" id="start_validating" width="140px" height="140px" class="cursor-pointer right-logo img-fluid"></a>
         </div>
         <div class="col-12 d-none position-absolute px-0" id="right-p-2" style="bottom:1rem">
             <div>
-                <%= __('Help us by validating the recordings that others have contributed') %>
+                <%= __(right.p1) %>
             </div>
             <div class="col-7 col-lg-6 col-xl-6" id="right-loader">
                 <div><span class="spinner"></span></div>
