--- a/views/modules/sunoIndia/home/sunoHome.ejs
+++ b/views/modules/sunoIndia/home/sunoHome.ejs
@@ -30,7 +30,7 @@
         <%- include ../../../common/languageNavBar/languageNavBar.ejs %>
     </div>
     <div class="m-auto row justify-content-center mt-lg-5 mx-lg-5">
-        <%- include ../../../common/card/cards.ejs %>
+        <%- include('../../../common/card/cards.ejs',{left:{h1:"Speak",h2:"Contribute Your Voice","p1":"Contribute your voice to create an open data repository of Indian languages",img:"../img/say.svg"},right:{h1:"Listen",h2:"Validate What They Say","p1":"Help us by validating the recordings that others have contributed",img:"../img/listen.svg"}}); %>
     </div>
     <div class="row">
         <div class="col-12 col-md-7 col-lg-6 ml-lg-auto p-5 text-dark mt-4">
