| priyanshu| extract horizontal bar graph and map from homepage

--- a/views/modules/sunoIndia/home/sunoHome.ejs
+++ b/views/modules/sunoIndia/home/sunoHome.ejs
@@ -124,9 +124,7 @@
                 <div class="justify-content-center align-items-center d-none" id="topLanguageSpinner">
                     <div><span class="spinner"></span></div>
                 </div>
-                <div id="speakers_hours_chart_container" class="w-100">
-                    <div id="speakers_hours_chart" class="w-90"></div>
-                </div>
+                <%- include ../../../common/charts/barGraph/horizontalBarGraph.ejs %>
             </div>
         </div>
         <div class="col-12 col-md-12 col-lg-12 px-0 oflow-x-hid"></div>
