--- a/views/modules/likhoIndia/home/likhoHome.ejs
+++ b/views/modules/likhoIndia/home/likhoHome.ejs
@@ -117,16 +117,11 @@
                     <div class="form-check mr-5"><label class="form-check-label" for="flexRadioDefault1"><input class="form-check-input" type="radio" name="topLanguageChart" id="hours_chart" value="hours" checked="checked">
                             <%= __('By hours of data contributed') %>
                         </label></div>
-                    <div class="form-check"><label class="form-check-label" for="flexRadioDefault2"><input class="form-check-input" type="radio" name="topLanguageChart" id="speakers_chart" value="speakers">
-                            <%= __('By number of speakers') %>
-                        </label></div>
                 </div>
                 <div class="justify-content-center align-items-center d-none" id="topLanguageSpinner">
                     <div><span class="spinner"></span></div>
                 </div>
-                <div id="speakers_hours_chart_container" class="w-100">
-                    <div id="speakers_hours_chart" class="w-90"></div>
-                </div>
+                <%- include ../../../common/charts/barGraph/horizontalBarGraph.ejs %>
             </div>
         </div>
         <div class="col-12 col-md-12 col-lg-12 px-0 oflow-x-hid"></div>
