--- a/views/common/modals/mic-speaker-testing/mic-speaker-testing.ejs
+++ b/views/common/modals/mic-speaker-testing/mic-speaker-testing.ejs
@@ -19,8 +19,8 @@
                 </div>
             </div>
             <div class="row justify-content-around mx-3 mx-lg-0 mx-xl-5 mb-2 align-items-center">
-                <%- include('./speaker-testing/speaker-testing.ejs') %>
-                <%- include('./speaker-testing/speaker-testing.ejs') %>
+                <%- include('../common/mic-testing.ejs') %>
+                <%- include('../common/speaker-testing.ejs') %>
             </div>
         </div>
     </div>
