--- a/views/modules/sunoIndia/record/record.ejs
+++ b/views/modules/sunoIndia/record/record.ejs
@@ -26,8 +26,8 @@
       integrity="sha256-1T9PQaTbbUusCVH72ahoGVZ1axGmU5uAOgSb4/GNXj8="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" type="text/css" href="./record.css" />
-    <link rel="stylesheet" type="text/css" href="../../../style/common.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/sunoIndia/record.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/common/common.css" />
   </head>
   <body>
     <%- include ../common/headerForContributor.ejs %>
@@ -191,7 +191,7 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <script src="../js/record.js"></script>
-    <script src="../js/mic-speaker-testing.js"></script>
+    <script src="../../js/sunoIndia/record.js"></script>
+    <script src="../../js/common/mic-speaker-testing.js"></script>
   </body>
 </html>
