[Sunny] correcting css imports in ejs

--- a/views/common/modals/mic-speaker-testing/mic-speaker-testing.ejs
+++ b/views/common/modals/mic-speaker-testing/mic-speaker-testing.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="./mic-speaker-testing.css">
+<link rel="stylesheet" type="text/css" href="../../css/common/mic-speaker-testing.css">
 <div class="test-mic-speakers-container">
         <div class="col-12 test-mic-speakers-details d-none" id="test-mic-speakers-details">
             <div class="row justify-content-between mb-4">
