--- a/views/common/modals/mic-speaker-testing/mic-testing/mic-testing.ejs
+++ b/views/common/modals/mic-speaker-testing/mic-testing/mic-testing.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="./mic-testing.css">
+<link rel="stylesheet" type="text/css" href="../../css/common/mic-testing.css">
 <div class="col-lg-5 col-md-10 px-0 mb-2 mb-lg-0">
     <div class="row justify-content-center">
         <div class="col-lg-5 col-7 col-md-5 col-sm-5 mb-2 mb-lg-0">
