--- a/views/common/modals/mic-speaker-testing/speaker-testing/speaker-testing.ejs
+++ b/views/common/modals/mic-speaker-testing/speaker-testing/speaker-testing.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="./speaker-testing.css">
+<link rel="stylesheet" type="text/css" href="../../css/common/speaker-testing.css">
 <div class="col-lg-5 col-md-10 px-0 mt-2 mt-lg-0">
     <div class="row justify-content-center">
         <audio controls="controls" id="test-speaker-hidden" style="display:none">
