| priyanshu| extract user Detail component

--- a/views/modules/sunoIndia/home/sunoHome.ejs
+++ b/views/modules/sunoIndia/home/sunoHome.ejs
@@ -117,7 +117,7 @@
     </div>
     <%- include ../../../common/buttons/viewAllDetailBtn/viewAllDetailBtn.ejs%>
 </div>
-<%- include ../../../modals/speakerDetail.ejs %>
+<%- include ../../../common/modals/userDetails/userDetails.ejs %>
 <%- include ../../../modals/content-languages.ejs %>
 <%- include ../../../modals/say-listen-language.ejs %>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
