--- a/views/modules/sunoIndia/dashboard.ejs
+++ b/views/modules/sunoIndia/dashboard.ejs
@@ -49,18 +49,7 @@
             </div>
         </div>
     </div>
-    <div class="row no-data-found justify-content-center d-none" id="no-data-found">
-        <div class="col-12 col-md-12 col-lg-8">
-            <div class="row d-flex justify-content-center">
-                <div class="col-11 col-md-9 col-lg-9 no-data-found-text"><span>
-                                <%- __('We do not have any data for this language, would you like to contribute for it?') %>
-                            </span></div>
-                <div class="col-11 col-md-3 col-lg-3 text-center contribute-now d-flex align-items-center justify-content-center" id="contribute-now" data-toggle="modal" data-target="#userModal">
-                    <%= __('Contribute Now') %>
-                </div>
-            </div>
-        </div>
-    </div>
+    <%- include ../../common/noDataFoundPopUp/noDataFoundPopUp.ejs %>
     <div class="row" id="speaker-data">
         <div class="col-12">
             <div class="row justify-content-center" id="loader1">
@@ -114,17 +103,6 @@
         </div>
     </div>
 </div>
-<div class="modal fade" id="modal-chart-wrapper" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog modal-lg w-75 mw-100 h-75 mx-auto">
-        <div class="modal-content border-primary border-2 h-100 p-lg-5 px-2 py-4">
-            <div class="text-right" aria-label="Close"><a href="#" aria-hidden="true" data-dismiss="modal">
-                    <%= __('Hide details') %> &lt;
-                </a></div>
-            <div id="modal-chart" class="h-100"></div>
-        </div>
-    </div>
-</div>
-<button data-toggle="modal" data-target="#content-language" class="d-none" id="toggle-content-language"></button>
 <%- include ../../modals/speakerDetail.ejs %>
 <%- include ../../modals/content-languages.ejs %>
 <%- include ../../modals/say-listen-language.ejs %>
