--- a/views/common/buttons/mic-speaker-test-btn/mic-speaker-test-btn.ejs
+++ b/views/common/buttons/mic-speaker-test-btn/mic-speaker-test-btn.ejs
@@ -12,4 +12,4 @@
     <%= __('Test your Microphone and Speakers') %>
   </button>
 </div>
-<script async src="./mic-speaker-test-btn.js"></script>
+<script async src="../../common/mic-speaker-test-btn.js"></script>
