--- a/views/common/buttons/report-btn/report-btn.ejs
+++ b/views/common/buttons/report-btn/report-btn.ejs
@@ -8,4 +8,4 @@
         <%= __('Report') %>
     </button>
 </div>
-<script async src="./report-btn.js"></script>
+<script async src="../../common/report-btn.js"></script>
