| priyanshu| delete extractes component files from assets

--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -10,16 +10,16 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
-            <li class="nav-item p-2"><a href="../home.html" class="nav-link text-dark font-weight-bold">
+            <li class="nav-item p-2"><a href="<%= bolo %>" class="nav-link text-dark font-weight-bold">
                     <%= __('Bolo India') %>
                 </a></li>
-            <li class="nav-item p-2"><a href="../sunoIndia/home.html" class="nav-link text-dark font-weight-bold">
+            <li class="nav-item p-2"><a href="<%= suno %>" class="nav-link text-dark font-weight-bold">
                     <%= __('Suno India') %>
                 </a></li>
-            <li class="nav-item p-2"><a href="../likhoIndia/home.html" class="nav-link text-dark font-weight-bold">
+            <li class="nav-item p-2"><a href="<%= likho %>" class="nav-link text-dark font-weight-bold">
                     <%= __('Likho India') %>
                 </a></li>
-            <li class="nav-item p-2"><a href="../dekhoIndia/home.html" class="nav-link text-dark font-weight-bold">
+            <li class="nav-item p-2"><a href="<%= dekho %>" class="nav-link text-dark font-weight-bold">
                     <%= __('Dekho India') %>
                 </a></li>
         </ul>
