--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <%- include common/headerForContributor.ejs %>
+    <%- include('common/header.ejs',{bolo:"./home.html", suno:"./sunoIndia/home.html",likho:"./likhoIndia/home.html",dekho:"./dekhoIndia/home.html"}); %>
         <div class="container-fluid supreme-container">
             <div class="row">
                 <div class="col-12 col-md-8 col-lg-10 offset-lg-1 mt-4">
