--- a/views/modules/dekhoIndia/home/home.ejs
+++ b/views/modules/dekhoIndia/home/home.ejs
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-<%- include ../../../common/header.ejs %>
+<%- include('../common/header.ejs',{bolo:"../home.html", suno:"../sunoIndia/home.html",likho:"./likhoIndia/home.html",dekho:"./home.html"}); %>
 <div class="container-fluid supreme-container">
     <div class="row">
         <%- include ../../../common/languageNavBar/languageNavBar.ejs %>
@@ -122,7 +122,7 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-<script src="../../js/dekhoHome.js" id="home-page"></script>
+<script src="../../js/dekhoIndia/home.js" id="home-page"></script>
 <script src="https://www.amcharts.com/lib/version/4.9.23/core.js"></script>
 <script src="https://www.amcharts.com/lib/version/4.9.23/charts.js"></script>
 <script src="https://www.amcharts.com/lib/version/4.9.23/maps.js"></script>
