--- a/views/modules/sunoIndia/home/home.ejs
+++ b/views/modules/sunoIndia/home/home.ejs
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-<%- include ../common/header.ejs %>
+<%- include('../common/header.ejs',{bolo:"../home.html", suno:"./home.html",likho:"../likhoIndia/home.html",dekho:"../dekhoIndia/home.html"}); %>
 <div class="container-fluid supreme-container">
     <div class="row">
         <%- include ../common/languageNavBar.ejs %>
