--- a/crowdsource-ui/src/views/modules/sunoIndia/home/home.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/home/home.ejs
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="google-site-verification" content="WzZdl_-Ka4oElzowGxq3Y8knBPs31AOHFnEqSUtjGFU">
     <meta name="description" content="Bolo India: A crowdsourcing initiative for Indian languages. A speech recognition product, that will be as Indian, as you and I. It will also be free of cost for every Indian. Make it happen by donating your voice">
-    <meta property="og:title" content="<%= __('Bolo India: A crowdsourcing initiative for Indian languages')%>">
+    <meta property="og:title" content="<%= __('Bolo India: A crowdsourcing initiative for Indian languages') %>">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="<%= __('I\'ve contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?')%>">
+    <meta property="og:description" content="<%= __('I\'ve contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?') %>">
     <meta property="og:site_name" content="Bolo India ">
     <meta property="og:url" content="https://boloindia.nplt.in">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169921734-1"></script>
@@ -30,28 +30,16 @@
         <%- include ../common/languageNavBar.ejs %>
     </div>
     <div class="m-auto row justify-content-center mt-lg-5 mx-lg-5">
-        <%- include('../common/cards.ejs',{left:{h1:"Speak",h2:"Contribute Your Voice","p1":"Contribute your voice to create an open data repository of Indian languages",img:"../../img/say.svg"},right:{h1:"Listen",h2:"Validate What They Say","p1":"Help us by validating the recordings that others have contributed",img:"../../img/listen.svg"}}); %>
+        <%- include('../common/cards.ejs',{left:{h1:"Listen",h2:"Type what you hear","p1":"Contribute your voice to create an open data repository of Indian languages",img:"../../img/listen2.svg"},right:{h1:"Validate",h2:"Correct text as per the audio","p1":"Help us by validating the recordings that others have contributed",img:"../../img/validate.svg"}}); %>
     </div>
     <div class="row">
-        <div class="col-12 col-md-7 col-lg-6 ml-lg-auto p-5 text-dark mt-4">
-            <h1 class="display-5 font-wt-900 site-blue lh-5 mt-lg-5">
-                <%= __('Bolo India: A crowdsourcing initiative for Indian languages') %>
-            </h1>
-            <p class="h5 font-weight-light-lg font-weight-normal-sm lh-7 site-blue text-justify mt-5">
-                <%= __('India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.') %> <a class="ml-1" href="./about-us.html">
-                    <%= __('Know More') %>
-                </a>
-            </p>
-        </div>
-        <div class="col-12 col-md-5 col-lg-5 text-right px-0 align-self-center oflow-x-hid"><img src="../../img/home.svg" width="614.8" height="759.548" alt="Bolo India Infograph" class="img-fluid mr-n1"></div>
-    </div>
-    <div class="row">
-        <div class="col-12 col-md-7 col-lg-6 ml-lg-auto p-5 pt-lg-0 text-dark">
+        <div class="col-12 col-md-7 col-lg-6 ml-lg-auto p-5 mt-4 text-dark">
             <h1 class="display-5 font-wt-900 site-blue lh-5">
                 <%= __('We rely on your contributions') %>
             </h1>
             <p class="h5 font-weight-light-lg font-weight-normal-sm lh-7 site-blue text-justify mt-5">
-                <%= __('The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.') %> <a class="ml-1" href="./about-us.html">
+                <%= __('The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.') %>
+                <a class="ml-1" href="./about-us.html">
                     <%= __('Know More') %>
                 </a>
             </p>
@@ -74,13 +62,13 @@
                 <div class="col-12 col-md-4 col-lg-4 col-xl-4 text-left d-none" id="speakers-wrapper">
                     <p class="h4" id="speaker-value"></p>
                     <p class="mb-0 fs-h4">
-                        <%= __('speakers contributed') %>
+                        <%= __('hrs contributed') %>
                     </p>
                 </div>
                 <div class="col-12 col-md-4 col-lg-4 col-xl-4 text-left d-none" id="hours-wrapper">
                     <div class="mb-0 d-flex align-items-center"><span class="h4" id="hour-value"></span></div>
                     <p class="mb-0 fs-h4">
-                        <%= __('hours recorded') %>
+                        <%= __('hrs validated') %>
                     </p>
                 </div>
             </div>
@@ -100,12 +88,9 @@
                     <%= __('Top Languages') %>
                 </h4>
                 <div class="d-flex mb-3">
-                    <div class="form-check mr-5"><label class="form-check-label" for="flexRadioDefault1"><input class="form-check-input" type="radio" name="topLanguageChart" id="hours_chart" value="hours" checked="checked">
-                            <%= __('By hours of data contributed') %>
-                        </label></div>
-                    <div class="form-check"><label class="form-check-label" for="flexRadioDefault2"><input class="form-check-input" type="radio" name="topLanguageChart" id="speakers_chart" value="speakers">
-                            <%= __('By number of speakers') %>
-                        </label></div>
+                    <div name="topLanguageChart" id="hours_chart" value="hours">
+                        <%= __('Total no. of audios listened') %>
+                    </div>
                 </div>
                 <div class="justify-content-center align-items-center d-none" id="topLanguageSpinner">
                     <div><span class="spinner"></span></div>
@@ -115,7 +100,7 @@
         </div>
         <div class="col-12 col-md-12 col-lg-12 px-0 oflow-x-hid"></div>
     </div>
-    <%- include ../common/viewAllDetailBtn.ejs%>
+    <%- include ../common/viewAllDetailBtn.ejs %>
 </div>
 <%- include ../common/userDetails.ejs %>
 <%- include ../common/content-languages.ejs %>
