| priyanshu| fix image path in sunoIndia validation page

--- a/crowdsource-ui/src/views/common/card/cards.ejs
+++ b/crowdsource-ui/src/views/common/card/cards.ejs
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="col-4 text-right px-0">
-            <a href="./validation.html">
+            <a href="./validator-page.html">
                 <img src="<%= right.img %>" alt="validator" id="start_validating" width="140px" height="140px" class="cursor-pointer right-logo img-fluid"></a>
         </div>
         <div class="col-12 d-none position-absolute px-0" id="right-p-2" style="bottom:1rem">
